<resources>
    <string name="app_name">Tuto4U</string>
    <string name="user_name_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="loading_text">Loading</string>
    <string name="submit_text">Submit</string>
    <string name="register_text">Register</string>
    <string name="find_tutor_who_best_suits_you_text">Find the tutor who best suits your need.</string>
    <string name="find_tutor_details_text">Find the tutor details below.</string>
</resources>
