<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/all_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/item_Width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="1"
            android:id="@+id/Usrnm"
            android:text="@string/user_name_text" />

        <EditText
            android:layout_width="@dimen/item_Width"
            android:layout_height="@dimen/item_height"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="2"
            android:hint="Enter User Name"
            android:id="@+id/UsrnmEdit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/item_Width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="1"
            android:text="@string/password_text"
            android:id="@+id/Pswd"/>

        <EditText
            android:id="@+id/PswdEdit"
            android:layout_width="@dimen/item_Width"
            android:layout_height="@dimen/item_height"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="2"
            android:hint="Enter Password"
            android:inputType="numberPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="1"
            android:text="@string/login_text"
            android:id="@+id/Login"/>
    </LinearLayout>
</LinearLayout>